--- a/assets/styles.css
+++ b/assets/styles.css
@@ -26,7 +26,7 @@ h3 {
 /* Général */
 
 body {
-    background: url('/img/fonf.jpg');
+    background: url('./img/fonf.jpg');
     background-size: cover;
     color: white;
 }
